cleaned up code, fixed some endpoints, added invite cleanup (cron)
