# src/lib/group-member.model.ts
@@ -1,8 +1,8 @@
-export class GroupMember {
+export class GroupMembership {
     public userId: string;
+    public groupId: string;
+    public email: string;
+    public displayName: string;
+    public photo: string;
 }
 
-export class GroupMembership {
-    public email: string;
-    public groupId: string;
-}
